--- a/src/main/resources/css/theme-1.css
+++ b/src/main/resources/css/theme-1.css
@@ -354,29 +354,89 @@
 }
 
 /*
-.table-row-cell:odd {
-        -fx-alignment: center-left;
-        -fx-text-alignment: left;
-        -fx-text-overrun:  leading-ellipsis;
-        -fx-wrap-text: true;
-        -fx-content-display: left;
-        -fx-font-family: "monospace";
-        -fx-font-size: 12pt;
-        -fx-font-weight: bold;
-        -fx-background-color: -fx-light-white-gray;
-        -fx-text-fill: -fx-dark-gray;
+.table-view .column-header,
+.table-view .column-header-background .filler {
+    -fx-background-color: -fx-dark-gray;
 }
 
-.table-row-cell:even {
-       -fx-alignment: center-left;
-        -fx-text-alignment: left;
-        -fx-text-overrun:  leading-ellipsis;
-        -fx-wrap-text: true;
-        -fx-content-display: left;
-        -fx-font-family: "monospace";
-        -fx-font-size: 12pt;
-        -fx-font-weight: bold;
-        -fx-background-color: -fx-dark-white-gray;
-        -fx-text-fill: -fx-pure-black;
+.table-view .column-header .label{
+   -fx-text-fill: white;
+   -fx-font-weight: bold;
+   -fx-alignment: CENTER;
 }
+
+.table-view .cell{
+  -fx-alignment: center-left;
+  -fx-background-color: -fx-light-gray;
+  -fx-border-color: white;
+  -fx-text-fill: -fx-dark-gray;
+}
+
+.table-row-cell:selected {
+   -fx-background-color: whitesmoke;
+   -fx-text-background-color:  #6622CC;
+}
+
+/* scroll bar starts here */
+/* The increment and decrement button CSS class of scrollbar */
+
+/*
+.table-view .increment-button ,.table-view .decrement-button {
+    -fx-background-color:transparent;
+	-fx-background-radius: 2em;
+
+}
+
+.table-view .scroll-bar:horizontal .track,
+.table-view .scroll-bar:vertical .track{
+	-fx-background-color: transparent;
+	-fx-border-color:derive( #6622CC,80%);
+	-fx-background-radius: 2em;
+	-fx-border-radius:2em;
+}
+
+.table-view .scroll-bar:horizontal .thumb,
+.table-view .scroll-bar:vertical .thumb {
+    -fx-background-color:derive( #6622CC,90%);
+	-fx-background-insets: 2, 0, 0;
+	-fx-background-radius: 2em;
+}
+
 */
+
+.table-view {
+    -fx-base: #1d1d1d;
+    -fx-control-inner-background: #1d1d1d;
+    -fx-background-color: #1d1d1d;
+    -fx-table-cell-border-color: transparent;
+    -fx-table-header-border-color: transparent;
+    -fx-padding: 5;
+}
+
+.table-view .column-header-background {
+    -fx-background-color: transparent;
+}
+
+.table-view .column-header, .table-view .filler {
+    -fx-size: 35;
+    -fx-border-width: 0 0 1 0;
+    -fx-background-color: transparent;
+    -fx-border-color:
+        transparent
+        transparent
+        derive(-fx-base, 80%)
+        transparent;
+    -fx-border-insets: 0 10 1 0;
+}
+
+.table-view .column-header .label {
+    -fx-font-size: 20pt;
+    -fx-font-family: "Segoe UI Light";
+    -fx-text-fill: white;
+    -fx-alignment: center-left;
+    -fx-opacity: 1;
+}
+
+.table-view:focused .table-row-cell:filled:focused:selected {
+    -fx-background-color: -fx-focus-color;
+}
