--- a/src/main/resources/ui/browser_window.fxml
+++ b/src/main/resources/ui/browser_window.fxml
@@ -69,14 +69,23 @@
                     </children>
                 </VBox>
                 <Separator orientation="VERTICAL" prefHeight="200.0" />
-                <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="118.0" prefWidth="222.0">
+                <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="400.0">
                     <children>
-                        <Label fx:id="message" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="300.0" styleClass="error-message" wrapText="true" VBox.vgrow="ALWAYS">
+                        <Label fx:id="message" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="400.0" styleClass="error-message" wrapText="true" VBox.vgrow="ALWAYS">
                             <font>
                                 <Font size="10.0" />
                             </font>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
                         </Label>
                     </children>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
                 </VBox>
             </children>
         </HBox>
@@ -102,9 +111,9 @@
                                         </VBox>
                                     </children>
                                 </AnchorPane>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="742.0" prefWidth="245.0">
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="742.0" prefWidth="245.0" style="-fx-background-color: #B4C1CC;">
                                     <children>
-                                        <TableView fx:id="queryResult" layoutX="66.0" layoutY="87.0" prefHeight="614.4" prefWidth="495.2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                        <TableView fx:id="queryResult" layoutX="66.0" layoutY="87.0" prefHeight="614.4" prefWidth="495.2" style="-fx-background-color: #B4C1CC;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                     </children>
                                 </AnchorPane>
                             </items>
